--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/stopwatch">
         <service android:name=".TimelapseService" />
         <activity android:name=".Timelapse"
+				          android:configChanges="keyboardHidden|orientation"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
