--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/stopwatch">
         <service android:name=".TimelapseService" />
         <activity android:name=".Timelapse"
-				          android:configChanges="keyboardHidden|orientation"
+                  android:launchMode="singleInstance"
+                  android:allowTaskReparenting="true"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,6 +16,7 @@
         </activity>
     </application>
 		<uses-permission android:name="android.permission.CAMERA"/>
+		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 		<uses-feature android:name="android.hardware.camera" />
 		<uses-sdk android:minSdkVersion="4" />
 		<!--uses-feature android:name="android.hardware.camera.autofocus" /-->
