--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
                   android:launchMode="singleInstance"
                   android:allowTaskReparenting="true"
                   android:label="@string/app_name">
+                  <!-- android:configChanges="orientation|keyboardHidden" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
