--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,8 +8,8 @@
         <activity android:name=".Timelapse"
                   android:launchMode="singleInstance"
                   android:allowTaskReparenting="true"
+                  android:configChanges="orientation|keyboardHidden"
                   android:label="@string/app_name">
-                  <!-- android:configChanges="orientation|keyboardHidden" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
