--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="floe.timelapse"
       android:versionCode="2"
       android:versionName="0.2">
-    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/speedclock" android:hardwareAccelerated="true">
+    <application android:label="@string/app_name" android:icon="@drawable/speedclock" android:hardwareAccelerated="true">
         <service android:name=".TimelapseService" />
         <activity android:name=".Timelapse"
                   android:launchMode="singleInstance"
