--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
       package="floe.timelapse"
       android:versionCode="2"
       android:versionName="0.2">
-    <application android:label="@string/app_name" android:icon="@drawable/speedclock" android:hardwareAccelerated="true">
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera" />
+    <!--uses-feature android:name="android.hardware.camera.autofocus" /-->
+    <application android:label="@string/app_name" android:icon="@drawable/speedclock" android:hardwareAccelerated="true" android:allowBackup="false">
         <service android:name=".TimelapseService" />
         <activity android:name=".Timelapse"
                   android:launchMode="singleInstance"
@@ -16,8 +20,4 @@
             </intent-filter>
         </activity>
     </application>
-		<uses-permission android:name="android.permission.CAMERA"/>
-		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-		<uses-feature android:name="android.hardware.camera" />
-    <!--uses-feature android:name="android.hardware.camera.autofocus" /-->
 </manifest> 
