--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-feature android:name="android.hardware.camera" />
     <!--uses-feature android:name="android.hardware.camera.autofocus" /-->
-    <application android:label="@string/app_name" android:icon="@drawable/speedclock" android:hardwareAccelerated="true" android:allowBackup="false">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_baseline_camera_enhance_24" android:hardwareAccelerated="true" android:allowBackup="false">
         <service android:name=".TimelapseService" />
         <activity android:name=".Timelapse"
                   android:launchMode="singleInstance"
